[package]
name = "mule-map"
authors = ["Michael Hancock"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["hash", "hashmap", "hybrid", "map", "table"]
description = "A hybrid between a HashMap and a lookup table"
repository = "https://github.com/gringasalpastor/mule-map"
readme = "README.md"
categories = ["data-structures"]


[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
num-traits = { version = "0.2.19", features = ["i128"] }
paste = "1.0.15"
sealed = "0.6.0"
#mule-map-macros = { path = "./src/mule-map-macros" }

[dev-dependencies]
fnv_rs = "0.4.3"
