[package]
name = "mule-map"
authors = ["Michael Hancock"]
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["hash", "hashmap", "hybrid", "map", "table"]
description = "A hybrid between a HashMap and a lookup table"
repository = "https://github.com/gringasalpastor/mule-map"
readme = "README.md"
categories = ["data-structures"]
exclude = ["assets", ".github", ".gitignore"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[dependencies]
bytemuck = "1.22.0"
num-traits = { version = "0.2.19", features = ["i128"] }
sealed = "0.6.0"

[dev-dependencies]
fnv_rs = "0.4.3"
test-utils = { path = "./test-utils" }
