[package]
name = "compare"
version = "0.0.1"
edition = "2024"
publish = false

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
mule-map = { path = ".." }
fnv_rs = "0.4.4"
rand = "0.10.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
#lto = true
#codegen-units = 1

[[bench]]
name = "bench"
harness = false

[dependencies]
bytemuck = "1.25.0"
